--- a/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
+++ b/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
@@ -617,16 +617,16 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gG0-bQ-0MT">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="358"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="390"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Subject" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ndu-lj-y42" customClass="MDCTextField">
-                                                <rect key="frame" x="16" y="80" width="343" height="30"/>
+                                                <rect key="frame" x="16" y="112" width="343" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VFU-hi-Fvr" customClass="MDCMultilineTextField">
-                                                <rect key="frame" x="16" y="118" width="343" height="150"/>
+                                                <rect key="frame" x="16" y="150" width="343" height="150"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" priority="750" constant="150" id="dx2-4q-niV"/>
@@ -636,7 +636,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kjP-54-gtT" customClass="MDCFlatButton">
-                                                <rect key="frame" x="16" y="300" width="343" height="42"/>
+                                                <rect key="frame" x="16" y="332" width="343" height="42"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="42" id="P2j-dK-8HW"/>
                                                 </constraints>
@@ -645,20 +645,29 @@
                                                     <action selector="postComment:" destination="5bP-Gt-HXN" eventType="touchUpInside" id="C3J-iZ-Avm"/>
                                                 </connections>
                                             </button>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vLa-Xa-Hzg">
+                                                <rect key="frame" x="16" y="16" width="80" height="80"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="80" id="rvB-gQ-1ks"/>
+                                                    <constraint firstAttribute="height" constant="80" id="xgg-Im-8Iz"/>
+                                                </constraints>
+                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="VFU-hi-Fvr" secondAttribute="trailing" constant="16" id="7pJ-A7-YRg"/>
                                             <constraint firstItem="VFU-hi-Fvr" firstAttribute="leading" secondItem="gG0-bQ-0MT" secondAttribute="leading" constant="16" id="95q-9i-2A7"/>
+                                            <constraint firstItem="vLa-Xa-Hzg" firstAttribute="top" secondItem="gG0-bQ-0MT" secondAttribute="top" constant="16" id="Cz2-JZ-XMr"/>
                                             <constraint firstItem="kjP-54-gtT" firstAttribute="leading" secondItem="gG0-bQ-0MT" secondAttribute="leading" constant="16" id="Eql-sI-17p"/>
                                             <constraint firstItem="VFU-hi-Fvr" firstAttribute="top" secondItem="ndu-lj-y42" secondAttribute="bottom" constant="8" id="Pnc-RJ-9EI"/>
+                                            <constraint firstItem="vLa-Xa-Hzg" firstAttribute="leading" secondItem="gG0-bQ-0MT" secondAttribute="leading" constant="16" id="QuM-yQ-G7F"/>
+                                            <constraint firstItem="ndu-lj-y42" firstAttribute="top" secondItem="vLa-Xa-Hzg" secondAttribute="bottom" constant="16" id="SpQ-p5-DMb"/>
                                             <constraint firstAttribute="height" priority="250" constant="500" id="TW9-B7-Qat"/>
                                             <constraint firstItem="ndu-lj-y42" firstAttribute="leading" secondItem="gG0-bQ-0MT" secondAttribute="leading" constant="16" id="dDc-GJ-ezJ"/>
                                             <constraint firstItem="kjP-54-gtT" firstAttribute="top" secondItem="VFU-hi-Fvr" secondAttribute="bottom" constant="32" id="fPR-Vn-b3p"/>
                                             <constraint firstAttribute="trailing" secondItem="ndu-lj-y42" secondAttribute="trailing" constant="16" id="n9v-ra-wDR"/>
                                             <constraint firstAttribute="bottom" secondItem="kjP-54-gtT" secondAttribute="bottom" constant="16" id="r44-24-b1r"/>
                                             <constraint firstAttribute="trailing" secondItem="kjP-54-gtT" secondAttribute="trailing" constant="16" id="trq-6Y-gBf"/>
-                                            <constraint firstItem="ndu-lj-y42" firstAttribute="top" secondItem="gG0-bQ-0MT" secondAttribute="top" constant="80" id="xv2-75-iRt"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -681,6 +690,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="avatarImageView" destination="vLa-Xa-Hzg" id="5Bp-2s-5AT"/>
                         <outlet property="commentTextField" destination="VFU-hi-Fvr" id="BnQ-4z-KCd"/>
                         <outlet property="scrollView" destination="Hi5-Wb-z6f" id="6NV-l5-qek"/>
                         <outlet property="subjectTextField" destination="ndu-lj-y42" id="JcH-2V-szL"/>
@@ -689,6 +699,54 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aQO-kQ-voJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3872.8000000000002" y="363.86806596701655"/>
+        </scene>
+        <!--Avatar Picker View Controller-->
+        <scene sceneID="Stu-eL-Qbo">
+            <objects>
+                <collectionViewController storyboardIdentifier="avatarPickerView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="nQ2-Tp-rdm" customClass="BCHDWAvatarPickerViewController" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Njw-eA-owE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Rf7-RA-mFb">
+                            <size key="itemSize" width="80" height="80"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="avatarCell" id="rZq-Za-noc" customClass="BCHDWAvatarPickerCollectionViewCell">
+                                <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zDB-8P-xDO">
+                                            <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                        </imageView>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="zDB-8P-xDO" secondAttribute="trailing" id="8mn-Sa-Ofe"/>
+                                    <constraint firstAttribute="bottom" secondItem="zDB-8P-xDO" secondAttribute="bottom" id="PiV-0D-1Ez"/>
+                                    <constraint firstItem="zDB-8P-xDO" firstAttribute="top" secondItem="rZq-Za-noc" secondAttribute="top" id="qXn-B1-Pfk"/>
+                                    <constraint firstItem="zDB-8P-xDO" firstAttribute="leading" secondItem="rZq-Za-noc" secondAttribute="leading" id="zo0-vA-RoM"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="avatarImageView" destination="zDB-8P-xDO" id="17D-Ou-q2y"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="nQ2-Tp-rdm" id="zOF-h2-IRE"/>
+                            <outlet property="delegate" destination="nQ2-Tp-rdm" id="0vs-jK-xws"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F4b-pe-q2u" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4781.6000000000004" y="363.86806596701655"/>
         </scene>
         <!--Profile-->
         <scene sceneID="s4W-54-xKK">
