--- a/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
+++ b/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
@@ -539,9 +539,18 @@
                                                 <action selector="reply:" destination="Xg9-vr-Z9O" eventType="touchUpInside" id="nkb-wW-60a"/>
                                             </connections>
                                         </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="36q-qD-LnS">
+                                            <rect key="frame" x="277" y="11" width="36" height="36"/>
+                                            <state key="normal" image="heart-nonselected"/>
+                                            <connections>
+                                                <action selector="like:" destination="Xg9-vr-Z9O" eventType="touchUpInside" id="CDw-Y3-3de"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="bottom" secondItem="hbf-8q-LKg" secondAttribute="bottom" constant="8" id="2zf-f4-Qtj"/>
+                                        <constraint firstItem="hbf-8q-LKg" firstAttribute="leading" secondItem="36q-qD-LnS" secondAttribute="trailing" constant="16" id="Pe7-4u-Q1w"/>
+                                        <constraint firstItem="hbf-8q-LKg" firstAttribute="centerY" secondItem="36q-qD-LnS" secondAttribute="centerY" id="hNo-3C-xaJ"/>
                                         <constraint firstItem="hbf-8q-LKg" firstAttribute="top" secondItem="9if-1c-ydp" secondAttribute="top" constant="16" id="oPA-3M-lFU"/>
                                         <constraint firstAttribute="trailing" secondItem="hbf-8q-LKg" secondAttribute="trailing" constant="16" id="wP8-jR-hTL"/>
                                     </constraints>
@@ -648,7 +657,7 @@
                                                     <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Comment"/>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
-                                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kjP-54-gtT" customClass="MDCFlatButton">
+                                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kjP-54-gtT" customClass="MDCFlatButton">
                                                 <rect key="frame" x="16" y="336" width="343" height="42"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="42" id="P2j-dK-8HW"/>
@@ -665,9 +674,8 @@
                                                     <constraint firstAttribute="height" constant="80" id="xgg-Im-8Iz"/>
                                                 </constraints>
                                             </imageView>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="49A-wp-PgS">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="close" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="49A-wp-PgS">
                                                 <rect key="frame" x="329" y="16" width="30" height="30"/>
-                                                <state key="normal" image="close-button"/>
                                                 <connections>
                                                     <action selector="close:" destination="5bP-Gt-HXN" eventType="touchUpInside" id="YeA-Vt-bAx"/>
                                                 </connections>
@@ -738,11 +746,11 @@
                             <size key="itemSize" width="80" height="80"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="sectionInset" minX="16" minY="16" maxX="16" maxY="16"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="avatarCell" id="rZq-Za-noc" customClass="BCHDWAvatarPickerCollectionViewCell">
-                                <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                <rect key="frame" x="16" y="16" width="80" height="80"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                     <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
@@ -1013,8 +1021,8 @@
         <segue reference="xOO-kU-qDc"/>
     </inferredMetricsTieBreakers>
     <resources>
-        <image name="close-button" width="30" height="30"/>
         <image name="gear" width="33" height="33"/>
+        <image name="heart-nonselected" width="36" height="36"/>
         <image name="image-icon" width="375" height="300"/>
         <image name="lock-icon" width="18" height="18"/>
         <image name="onepassword-login-button" width="41" height="41"/>
